Revert "Prevent live-player overflow on small screens"

--- a/css/style.css
+++ b/css/style.css
@@ -491,7 +491,6 @@ section {
   display: flex;
   flex-direction: column;
   height: calc(100vh - 120px);
-  min-height: 315px;
 }
 
 .video-section iframe {
@@ -499,14 +498,6 @@ section {
   height: 315px;
   border: none;
   border-radius: 4px;
-}
-
-.live-player {
-  min-height: 315px;
-}
-
-.youtube-section.media-hub-section {
-  min-height: 315px;
 }
 
 .video-section .video-list {
